fix overflow issue for filters

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -608,7 +608,7 @@ body.active-popup {
 .products-head .head-btns { float:left; }
 .products-head .head-btns a { width:113px; padding:0; float:left; margin-right:7px; }
 
-.products-head .filters { float:right; display:inline; padding-top:16px; width: 500px; overflow: hidden; margin-left: -120px;}
+.products-head .filters { float:right; display:inline; padding-top:16px; width: 500px; margin-left: -120px;}
 .products-head .search { min-width:20px; position:relative; float:right; display:inline; padding-left:10px;}
 .products-head .search .search-btn { position:absolute; top:6px; right:6px; z-index:3; }
 .products-head .search .field-holder { float:left; display:inline; }
